remove output folder inputs

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -185,7 +185,7 @@ jobs:
 
       - name: Clean ID in first row
         run: |
-          python scripts/01-clean-id.py --input_folder doc/_build/markdown --output_folder output
+          python scripts/01-clean-id.py --input_folder doc/_build/markdown
 
       - name: Clean Empty Rows
         run: |
@@ -197,11 +197,11 @@ jobs:
 
       - name: Add header to tables
         run: |
-          python scripts/04-add-header-to-tables.py --input_file output/toc.yml --output_file output/toc.yml
+          python scripts/04-add-header-to-tables.py --input_file output/toc.yml
 
       - name: Remove links in heading
         run: |
-          python scripts/05-remove-link-in-heading.py --input_file output/toc.yml --output_file output/toc.yml
+          python scripts/05-remove-link-in-heading.py --input_file output/toc.yml
 
       - name: Upload to GitHub Artifacts
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
