--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -287,9 +287,9 @@ jobs:
 
   doc-deploy-index:
     name: "Index the documentation and scrap using PyMeilisearch"
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: doc-deploy-dev
-    if: github.event_name == 'push'
     strategy:
       matrix:
         mechanical-version: ['23.2.0' , '24.1.0']
@@ -312,37 +312,37 @@ jobs:
 
   release-pypi-private:
     name: "Release to the private PyPI repository"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: [doc-build]
     steps:
       - name: "Release to the private PyPI repository"
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
         uses: ansys/actions/release-pypi-private@v4
         with:
           library-name: ${{ env.PACKAGE_NAME }}
           twine-username: "__token__"
           twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
 
-  release-pypi-public:
-    name: "Release to the public PyPI repository"
-    runs-on: ubuntu-latest
-    needs: [release-pypi-private]
-    steps:
-      - name: "Release to the public PyPI repository"
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-        uses: ansys/actions/release-pypi-public@v4
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          twine-username: "__token__"
-          twine-token: ${{ secrets.PYPI_TOKEN }}
+  # release-pypi-public:
+  #   name: "Release to the public PyPI repository"
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   runs-on: ubuntu-latest
+  #   needs: [release-pypi-private]
+  #   steps:
+  #     - name: "Release to the public PyPI repository"
+  #       uses: ansys/actions/release-pypi-public@v4
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         twine-username: "__token__"
+  #         twine-token: ${{ secrets.PYPI_TOKEN }}
 
   release-github:
     name: "Release to GitHub"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
-    needs: [release-pypi-public]
+    needs: [release-pypi-private]
     steps:
       - name: "Release to GitHub"
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
         uses: ansys/actions/release-github@v4
         with:
           library-name: ${{ env.PACKAGE_NAME }}
