add headers, update workflows, and run all assemblies

--- a/.github/workflows/ci_cd_doc.yml
+++ b/.github/workflows/ci_cd_doc.yml
@@ -114,139 +114,58 @@ jobs:
           echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
-      - name: Install doc dependencies
+      - name: Install documentation dependencies
         run: |
-            apt-get install git -y
-            pip install -e .[doc]
+          apt-get install git -y
+          pip install -e .[doc]
 
-      - name: Create Markdown documentation
+      - name: Create markdown documentation
         run: |
           sphinx-build -M markdown doc/source doc/_build
-
-      - name: Upload Markdown Documentation
-        uses: actions/upload-artifact@v3
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        with:
-            name: documentation-md-${{ matrix.versions.image }}
-            path: doc/_build/markdown
-            retention-days: 7
-
-      - name: Create Output Directory
-        run: |
-          mkdir -p output
-
-      - name: Clean ID in first row
-        run: |
-          python scripts/01-clean-id.py --input_folder doc/_build/markdown --output_folder output
-
-      - name: Clean Empty Rows
-        run: |
-          python scripts/02-clean-empty-row.py --input_folder output
-
-    # - name: Create Table of Contents
-    #   run: |
-    #     # python scripts/03-create-toc-from-html-mechanical.py --input_folder output
-
-      - name: Add header to tables
-        run: |
-          python scripts/04-add-header-to-tables.py --input_file output/toc.yml --output_file output/toc.yml
-
-      - name: Remove links in heading
-        run: |
-          python scripts/05-remove-link-in-heading.py --input_file output/toc.yml --output_file output/toc.yml
-
-      - name: Upload to GitHub Artifacts
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        uses: actions/upload-artifact@v4
-        with:
-          name: processed-markdown-files-${{ matrix.versions.image }}
-          path: output/
 
       - name: Create Sphinx documentation
         run: |
           make -C doc html
 
-      - name: Upload HTML Documentation
+      - name: Clean ID in first row
+        run: |
+          python scripts/01-clean-id.py
+
+      - name: Clean empty rows
+        run: |
+          python scripts/02-clean-empty-row.py
+
+      - name: Create table of contents
+        run: |
+          python scripts/03-create-toc-from-html-mechanical.py
+
+      - name: Add header to tables
+        run: |
+          python scripts/04-add-header-to-tables.py
+
+      - name: Remove links in heading
+        run: |
+          python scripts/05-remove-link-in-heading.py
+
+      - name: Upload to GitHub Artifacts
+        if: matrix.python-version == env.MAIN_PYTHON_VERSION
+        uses: actions/upload-artifact@v4
+        with:
+          name: toc-file-${{ matrix.versions.image }}
+          path: output/
+
+      - name: Upload markdown documentation
+        uses: actions/upload-artifact@v3
+        if: matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: documentation-md-${{ matrix.versions.image }}
+          path: doc/_build/markdown
+          retention-days: 7
+
+      - name: Upload Sphinx HTML documentation
         uses: actions/upload-artifact@v3
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
           name: documentation-html-${{ matrix.versions.image }}
           path: doc/_build/html
           retention-days: 7
-
-      - name: Generate needed files for deploying pages
-        run: |
-          touch .nojekyll CNAME
-          echo ${{ env.DOCUMENTATION_CNAME }} >> CNAME
-
-  doc-deploy:
-    name: Documentation deploy
-    runs-on: ubuntu-latest
-    needs: [doc-build]
-    strategy:
-      matrix:
-        mechanical-version: ['23.2.0' , 24.1.0']
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: documentation-html-${{ matrix.mechanical-version }} # documentation-md-${{ matrix.mechanical-version }}
-          path: documentation-html-${{ matrix.mechanical-version }} # documentation-md-${{ matrix.mechanical-version }}
-
-      - name: List all files
-        run: ls -R .
-
-      - name: Deploy to GitHub Pages
-        if: contains(github.ref, 'refs/heads/main')
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: documentation-html-${{ matrix.mechanical-version }}/ # documentation-md-${{ matrix.mechanical-version }}/
-          clean: true
-          single-commit: true
-
-  doc-deploy-dev:
-    name: "Deploy development documentation"
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-    needs: doc-build
-    strategy:
-      matrix:
-        mechanical-version: ['23.2.0' , 24.1.0']
-    steps:
-      - name: "Deploy development documentation"
-        uses: ansys/actions/doc-deploy-dev@v4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          doc-artifact-name: documentation-html-${{ matrix.mechanical-version }}
-
-  doc-deploy-index:
-    name: "Index the documentation and scrap using PyMeilisearch"
-    runs-on: ubuntu-latest
-    needs: doc-deploy-dev
-    if: github.event_name == 'push'
-    strategy:
-      matrix:
-        mechanical-version: ['23.2.0' , 24.1.0']
-    steps:
-      - name: Scrape the stable documentation to PyMeilisearch
-        run: |
-          VERSION=$(python -c "from ansys.mechanical.stubs import __version__; print('.'.join(__version__.split('.')[:2]))")
-          VERSION_MEILI=$(python -c "from ansys.mechanical.stubs import __version__; print('-'.join(__version__.split('.')[:2]))")
-          echo "Calculated VERSION: $VERSION"
-          echo "Calculated VERSION_MEILI: $VERSION_MEILI"
-
-      - name: "Deploy the latest documentation index"
-        uses: ansys/actions/doc-deploy-index@v4.1
-        with:
-          cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
-          index-name: "<index-name>v$VERSION_MEILI"
-          host-url: "<meilisearch-host-url>"
-          api-key: ${{ secrets.MEILISEARCH_API_KEY }}
-          doc-artifact-name: documentation-html-${{ matrix.mechanical-version }}
