--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -99,7 +99,7 @@ jobs:
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
           # Install library with -v to ensure stub_generator content is displayed
-          pip install . -v 2> results.txt
+          pip install . 2> results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
