add version to get version job

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,7 +63,6 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         versions: [
-          # { image: '23.2.0', version: '232' },
           { image: '24.1.0', version: '241' }
         ]
         python-version: ['3.10'] #, '3.11', '3.12']
@@ -119,8 +118,8 @@ jobs:
       - name: Retrieve Mechanial version
         run: |
           pip install -e .
-          echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
-          echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
+          echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs.v${{ matrix.versions.version }} import __version__; print(__version__)')" >> $GITHUB_ENV
+          echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs.v${{ matrix.versions.version }} import __version__; print(__version__)")"
 
       - name: Install build and twine, and build dist artifacts
         env:
@@ -230,7 +229,7 @@ jobs:
     needs: [doc-build]
     strategy:
       matrix:
-        mechanical-version: ['24.1.0'] # , ['23.2.0']
+        mechanical-version: ['24.1.0']
 
     steps:
       - name: Checkout
@@ -262,7 +261,7 @@ jobs:
     needs: doc-build
     strategy:
       matrix:
-        mechanical-version: ['24.1.0'] # , '23.2.0']
+        mechanical-version: ['24.1.0']
     steps:
       - name: "Deploy development documentation"
         uses: ansys/actions/doc-deploy-dev@v4
@@ -278,7 +277,7 @@ jobs:
     needs: doc-deploy-dev
     strategy:
       matrix:
-        mechanical-version: ['24.1.0'] # , '23.2.0']
+        mechanical-version: ['24.1.0']
     steps:
       - name: "Deploy stable documentation"
         uses: ansys/actions/doc-deploy-stable@v4
@@ -294,7 +293,7 @@ jobs:
     needs: doc-deploy-dev
     strategy:
       matrix:
-        mechanical-version: ['24.1.0'] # , '23.2.0']
+        mechanical-version: ['24.1.0']
     steps:
       - name: Scrape the stable documentation to PyMeilisearch
         run: |
